updated my frontend styling

--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
    <link rel="stylesheet" type="text/css" href="./style.css"/>   <title>Kgothatso</title>
 </head>
 <body>
-   <div class="main">
-      <div class="main-bar">
-         <img class="barcode" src="images/image-qr-code.png" />
-         <h2 class="barcodes" id="myh2">Improve your front-end skills<br />by buliding projets 
-   </h2>
-   <p lass="barcodes"> Scan the QR code to visit frontend mentor and take your coding to the next level</h2>
-         </div>
+   <div>
+      <img id="qr-code" src="images/image-qr-code.png" alt="QR code">
+      <h1>Improve your front-end skills by building projects</h1>
+
+      <p>Scan the QR code to visit Frontend Mentor and take your coding skills
+        to
+        the next level</p>
+      </div>
    </div>
 </body>
 </html>
